# settfex

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMPREHENSIVE_AUDIT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  RELEASING.md  SECURITY.md  main.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/prompts/: Coding.prompt.md  Prompt-Engineer.prompt.md
.github/workflows/: ci.yml  release.yml  security.yml
docs/: index.md  session_caching.md
docs/guide/: PYTHON_LIBRARY_BEST_PRACTICES.md
docs/settfex/services/sec/: financial_report.md
docs/settfex/services/set/: API_PROTECTION_NOTE.md  board_of_director.md  chart_quotation.md  corporate_action.md  earnings_call.md  financial.md  highlight_data.md  index.md  latest_historical_trading.md  list.md  news.md  nvdr_holder.md  price_performance.md  profile_company.md  profile_stock.md  shareholder.md  trading_stat.md
docs/settfex/services/tfex/: list.md  trading_statistics.md
docs/settfex/utils/: data_fetcher.md  session_caching.md
docs/solution/: FINDINGS.md  Performance Boost Session Caching Implementation.md  SESSION_CACHE_SUMMARY.md  SOLUTION_100_PERCENT.md
examples/: README.md  set_historical_example.py  set_realtime_example.py  set_stock_list_example.py  tfex_historical_example.py  tfex_realtime_example.py
examples/sec/: 01_financial_report.ipynb
examples/set/: 01_stock_list.ipynb  02_highlight_data.ipynb  03_stock_profile.ipynb  04_company_profile.ipynb  05_corporate_action.ipynb  06_shareholder.ipynb  07_nvdr_holder.ipynb  08_board_of_director.ipynb  09_trading_statistics.ipynb  10_price_performance.ipynb  11_financial.ipynb  12_earnings_call.ipynb  13_chart_quotation.ipynb  14_latest_historical_trading.ipynb  15_market_index.ipynb  16_news.ipynb  README.md  cpall_balance_sheet.csv  market_dashboard_20251005_210737.csv  thailand_banking_stocks.csv  thailand_set_main_board.csv  thailand_stock_universe.csv
examples/tfex/: 01_series_list.ipynb  02_trading_statistics.ipynb  03_underlying_price.ipynb
scripts/: build.py
scripts/settfex/services/set/: verify_board_of_director.py
settfex/: __init__.py  exceptions.py
settfex/services/: __init__.py
settfex/services/sec/: __init__.py  company.py  constants.py  download.py  financial_report.py  sec.py  utils.py
settfex/services/set/: __init__.py  client.py  constants.py  earnings_call.py  historical.py  list.py  news.py  realtime.py
settfex/services/set/index/: __init__.py  chart_quotation.py  composition.py  index.py  info.py  list.py  utils.py
settfex/services/set/stock/: __init__.py  board_of_director.py  chart_quotation.py  corporate_action.py  highlight_data.py  latest_historical_trading.py  nvdr_holder.py  price_performance.py  profile_company.py  profile_stock.py  shareholder.py  stock.py  trading_stat.py  utils.py
settfex/services/set/stock/financial/: __init__.py  financial.py
settfex/services/tfex/: __init__.py  client.py  constants.py  historical.py  list.py  realtime.py  trading_statistics.py  underlying_price.py
settfex/utils/: __init__.py  data_fetcher.py  http.py  logging.py  parsing.py  session_cache.py  session_manager.py  validation.py  youtube_transcript.py
tests/: __init__.py
tests/services/sec/: __init__.py  fixtures.py  test_company.py  test_download.py  test_financial_report.py  test_sec.py  test_utils.py
tests/services/set/: __init__.py  test_board_of_director.py  test_client.py  test_corporate_action.py  test_earnings_call.py  test_historical.py  test_list.py  test_news.py  test_profile_company.py  test_realtime.py  test_shareholder.py  test_symbol_suggestion.py
tests/services/set/index/: __init__.py  test_chart_quotation.py  test_composition.py  test_index.py  test_info.py  test_list.py
tests/services/set/stock/: test_chart_quotation.py  test_latest_historical_trading.py
tests/services/set/stock/financial/: __init__.py  test_financial.py
tests/services/tfex/: __init__.py  test_client.py  test_historical.py  test_list.py  test_realtime.py  test_trading_statistics.py  test_underlying_price.py
tests/utils/: test_data_fetcher.py  test_formatting.py  test_http.py  test_logging.py  test_parsing.py  test_session_manager.py  test_validation.py  test_youtube_transcript.py
