[project]
name = "settfex"
version = "0.12.0"
description = "Async Python library for fetching real-time and historical data from the Stock Exchange of Thailand (SET) and Thailand Futures Exchange (TFEX)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "curl-cffi>=0.6.0",
    "pydantic>=2.0.0",
    "loguru>=0.7.0",
    "diskcache>=5.6.0",
]
authors = [
    { name = "batt", email = "b@candythink.com" }
]
maintainers = [
    { name = "batt", email = "b@candythink.com" }
]
license = { text = "MIT" }
keywords = [
    "set",
    "tfex",
    "thailand",
    "stock",
    "exchange",
    "futures",
    "finance",
    "trading",
    "async",
    "api",
    "market-data",
    "thai-stocks",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/lumduan/settfex"
Documentation = "https://github.com/lumduan/settfex#readme"
Repository = "https://github.com/lumduan/settfex"
Issues = "https://github.com/lumduan/settfex/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["settfex"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# --cov-fail-under is a regression floor set just below current coverage (~49%).
# Goal is 80%; raise this incrementally as unit-test coverage improves.
addopts = "-v --strict-markers --cov=settfex --cov-report=term-missing --cov-fail-under=45"

[tool.coverage.run]
source = ["settfex"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# E/F/W=pycodestyle+pyflakes, I=isort, N=pep8-naming, UP=pyupgrade,
# B=flake8-bugbear, SIM=flake8-simplify
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
# Notebooks: long lines/late imports are illustrative; zip strict= and nested-if
# rewrites add noise to example code.
"*.ipynb" = ["E501", "E402", "B905", "SIM102"]
# Tests: blind `pytest.raises(Exception)` is an accepted pattern for asserting
# that *some* error propagates.
"tests/**" = ["E501", "B017"]

[tool.mypy]
plugins = ["pydantic.mypy"]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
# Derive module names from the repo root so non-package dirs get dotted names (e.g.
# scripts.settfex....) and can be targeted by the per-module override below. No-op in CI, which
# has no scripts/ (it is gitignored — see below).
explicit_package_bases = true
mypy_path = "."

# pandas/tqdm/youtube-transcript-api are optional, untyped runtime extras; don't require their
# stubs to keep the strict gate green.
[[tool.mypy.overrides]]
module = [
    "pandas",
    "pandas.*",
    "tqdm",
    "tqdm.*",
    "youtube_transcript_api",
    "youtube_transcript_api.*",
]
ignore_missing_imports = true

# tests/ ARE type-checked for real errors (arg-type, union-attr, call-arg, ...), but are not
# required to carry full annotations — no `-> None`/param boilerplate on every test. The shipped
# package itself stays fully strict (disallow_untyped_defs above).
# scripts/ is gitignored (local-only verification helpers); it is listed here purely so that
# `uv run mypy .` stays usable for developers who keep those local scripts.
[[tool.mypy.overrides]]
module = ["tests", "tests.*", "scripts", "scripts.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_calls = false

[tool.bandit]
exclude_dirs = ["tests", ".venv", "scripts"]

[tool.uv]
default-groups = ["dev"]

[project.optional-dependencies]
# Lightweight extra for the DataFrame convenience (EarningsCallResponse.to_dataframe()).
dataframe = [
    "pandas>=2.0.0",
]
# Progress bars for long fetches (e.g. fetch_all_earnings_calls(progress=True)).
progress = [
    "tqdm>=4.66.0",
]
# YouTube transcript fetching for earnings calls (fetch_transcripts / get_earnings_call_transcript).
transcript = [
    "youtube-transcript-api>=1.0.0",
]
examples = [
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
    "tqdm>=4.66.0",
    "youtube-transcript-api>=1.0.0",
]

[dependency-groups]
dev = [
    "bandit>=1.7",
    "build>=1.0.0",
    "mypy>=1.18.2",
    # pandas is an optional runtime extra (see [project.optional-dependencies].dataframe);
    # it lives in the dev group too so the to_dataframe() tests run in CI.
    "pandas>=2.0.0",
    "pip-audit>=2.7",
    "pre-commit>=3.7",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.2",
    # tqdm is the optional `progress` extra; in dev so the progress-bar tests run in CI.
    "tqdm>=4.66.0",
    "twine>=5.0.0",
    # youtube-transcript-api is the optional `transcript` extra; in dev so its tests run in CI.
    "youtube-transcript-api>=1.0.0",
]
